<resources>
    <string name="app_name">SelfAccounting</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_getstatement">Get Statement</string>
    <string name="menu_updaterecord">Update Record</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_helpandfeedback">help and Feedback </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_statement">Statement</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="emailid">EmailID</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="newname">New Name</string>
    <string name="newemailid">New EmailID</string>
    <string name="title_activity_statement_by_first_name">StatementByFirstName</string>
</resources>